<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="@dimen/spacing_xlarge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_title"
            android:textAppearance="@style/textAppearance.size22.bold"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:textColorHint="@color/grey_text"
            app:passwordToggleContentDescription="@string/fragment_login_edt_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/fragment_login_edt_email"
                android:inputType="textEmailAddress"
                android:textAlignment="inherit" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:textColorHint="@color/grey_text"
            app:passwordToggleContentDescription="@string/fragment_login_password"
            app:passwordToggleDrawable="@drawable/selector_show_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:hint="@string/fragment_login_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textAlignment="inherit" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.android.l2l.twolocal.view.CustomButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_huge"
            android:background="@drawable/selector_button_secondary_solid"
            android:text="@string/fragment_login_btn_login"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/loginSignUpLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_login_didn_t_signup_yet_question" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/fragment_login_create_an_account"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/image_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:contentDescription="@string/fragment_login_fingerprint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_fingerprint"
        app:srcCompat="@drawable/ic_fingerprint" />

    <TextView
        android:id="@+id/text_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:text="@string/fragment_login_touch_the_fingerprint_sensor_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_fingerprint" />
</androidx.constraintlayout.widget.ConstraintLayout>